[package]
name         = "ramsey"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.92.0"
description  = "High-performance Ramsey number search engine for R(C4, K_n)"
license      = "MIT"
keywords     = ["ramsey", "graph-theory", "combinatorics", "optimization"]
categories   = ["algorithms", "mathematics"]

[lib]
name = "ramsey"
path = "src/lib.rs"

[[bin]]
name = "ramsey"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[dependencies]
rand          = "0.9.2"
rand_xorshift = "0.4.0"
rayon         = "1.11.0"

# ============================================================================
# Optimization Profiles
# ============================================================================

[profile.release]
opt-level           = 3
lto                 = "fat"      # Full Link Time Optimization across all crates
codegen-units       = 1          # Maximum optimization at the cost of compile time
panic               = "abort"    # Remove unwinding overhead
incremental         = false      # Disable incremental compilation for release
overflow-checks     = false      # Disable for maximum performance in hot loops
debug               = false      # Exclude debug symbols
strip               = "symbols"  # Strip symbols from binary

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 2
